src/test/deca/context/invalid/renduInter01/00EXCLAM_type_incompatible.deca
// Description:
//    tests de programme incorrect au niveau du typage (expression "not" applicable sur un booléen seulement)
//
// Resultats:
//    Ligne 9 : incompatible type

{
    String x = "hello";
    if ( !x ) {
        println("ok");
    }
}
